<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">coinwallet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_title">Username:</string>
    <string name="password_title">Password:</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="username_hint">phone# or email</string>
    <string name="password_hint">At least 10 chars long</string>
    <string name="question_text">Secret Question:</string>
    <string name="answer_label">Secret Answer:</string>
    <string name="finish_register_button">Finish Registration</string>
    <string name="title_activity_lander">LanderActivity</string>

    <!-- Address resources -->
    <string name="addr_screen_name">Addresses</string>
    <string name="add_new_addr">Add New</string>
    
    <string name="archived_active_btn">Archived/Active</string>
    
    <string name="new_question_label">New Security Question:</string>
    
    <string name="new_answer_label">New Security Answer:</string>
    
    <string name="change_qna_button_label">Change Question &amp; Answer</string>
    
    <string name="guid_header_label">GUID:</string>
    
</resources>
